--- a/style.css
+++ b/style.css
@@ -23,6 +23,46 @@ a{
 
 /* Hero Section */
 #hero{
-    background-image: url();
+    background-image: url(./img/görsel1.png);
+    background-size: cover;
+    background-position: top center;
+    position: relative;
+    z-index: 1;
+}
+#hero::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width:  100%;
+    background-color: rgb(0, 0, 0);
+    opacity: .5;
+    z-index: -1;
+}
+#hero h1{
+    display: block;
+    width: fit-content;
+    font-size: 4rem;
+    position: relative;
+    color:white;
+}
+#hero .cta{
+    display: inline-block;
+    padding: 10px 30px;
+    color: rgb(255, 255, 255);
+    background-color: transparent;
+    border: 2px solid crimson;
+    font-size: 2rem;
+    text-transform: uppercase;
+    letter-spacing: .1rem;
+    margin-top: 30px;
+    transition: .3s ease background-color;
+    transition-property: background-color, color;
+}
+#hero .cta:hover {
+        color: white ;
+        background-color: crimson;
+    }
 }
 /* EndHero Section */
