--- a/style.css
+++ b/style.css
@@ -45,16 +45,18 @@ a {
    font-size: 4rem;
    position: relative;
    color: transparent;
+   animation-delay: 1s;
+}
+#hero h1:nth-child(1) {
    animation: text_reveal 1s ease forwards;
    animation-delay: 1s;
 }
-#hero h1 :nth-child(1) {
-   animation-delay: 1s;
-}
-#hero h1 :nth-child(2) {
+#hero h1:nth-child(2) {
+   animation: text_reveal 1s ease forwards;
    animation-delay: 2s;
 }
-#hero h1 :nth-child(3) {
+#hero h1:nth-child(3) {
+   animation: text_reveal 1s ease forwards;
    animation-delay: 3s;
 }
 #hero h1 span {
