--- a/style.css
+++ b/style.css
@@ -39,6 +39,12 @@ a {
    opacity: 0.5;
    z-index: -1;
 }
+#hero .hero {
+   max-width: 1200px;
+   margin: 0 auto;
+   padding: 0 50px;
+   justify-content: flex-start;
+}
 #hero h1 {
    display: block;
    width: fit-content;
@@ -57,6 +63,7 @@ a {
 }
 #hero h1:nth-child(3) {
    animation: text_reveal 1s ease forwards;
+   animation: text_reveal_name 1s ease forwards;
    animation-delay: 3s;
 }
 #hero h1 span {
@@ -111,6 +118,11 @@ a {
 @keyframes text_reveal {
    100% {
       color: white;
+   }
+}
+@keyframes text_reveal_name {
+   100% {
+      color: crimson;
    }
 }
 /* End Keyframes */
